--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     </span>
                                     <div class="dropdown-menu" v-if="message.showDropdown">
                                         <ul>
-                                            <li @click="deleteMessage(contact, messageIndex)">Cancella messaggio</li>
+                                            <li  @click="deleteMessage(message.id)">Cancella messaggio</li>
                                             <li>Info</li>
                                         </ul>
                                     </div>
